# MiaoChuangShuo

./: .gitignore  .nojekyll  CONTRIBUTING.md  DEEP_RESEARCH_AI_CLIENT_MODULES.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  _commit_msg.txt  _commitmsg.tmp  index.html  package-lock.json  package.json  release_notes.md  release_notes_v2.3.0.md  tailwind.config.js  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  (+1 more)
docs/: 报名文案.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_commands.rs  ai_config.rs  ai_context.rs  character_commands.rs  character_graph_commands.rs  codex_commands.rs  editor_preferences.rs  error.rs  foreshadowing_commands.rs  fs_commands.rs  index_sync.rs  legacy_migration.rs  lib.rs  main.rs  manifest.rs  pmd_migration.rs  project_template.rs  prosemirror_parser.rs  scene_commands.rs  schema_commands.rs  snapshot_commands.rs  tantivy_indexer.rs  tantivy_search.rs  template_schema.rs  text_extractor.rs  timeline_commands.rs  word_count.rs
src-tauri/src/ai_context/: character.rs  mod.rs  project.rs  scene.rs
src-tauri/src/codex/: crud.rs  migration.rs  mod.rs  parser.rs  scan.rs
src-tauri/src/commands/: archive_commands.rs  custom_template_commands.rs  export_commands.rs  file_io_commands.rs  mod.rs  project_commands.rs  search_replace_commands.rs  writing_stats_commands.rs
src-tauri/templates/: character_fantasy.toml  character_mystery.toml  character_romance.toml  character_scifi.toml  character_standard.toml  glossary_standard.toml  outline_chapter.toml  outline_standard.toml  worldview_fantasy.toml  worldview_standard.toml
(+219 files in other folders)
