[package]
name = "miaochuangshuo"
version = "26.7.32"
description = "喵创说 - 离线小说创作工作站"
authors = ["MiaoChuangShuo"]
edition = "2021"

[lib]
name = "miaochuangshuo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util", "time"] }
trash = "5"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
tantivy = "0.22"
tantivy-jieba = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
base64 = "0.22"
thiserror = "1"
toml = "0.8"
# 系统钥匙串存储 API Key (Windows Credential Manager / macOS Keychain / Linux Secret Service)
# 安全升级: 替代原 Base64 编码存储, 防止本地文件被读取后明文暴露
keyring = "4"
# JSON Schema 自动生成 (Task 1.7)
# 为核心数据结构派生 JsonSchema, 输出 schema 文件供前端类型生成与 CI 一致性校验
schemars = { version = "0.8", features = ["uuid1", "chrono"] }

# Windows 平台专用依赖 (Task 2.2 / Task 2.3)
# 使用 DPAPI (Data Protection API) 加密 API Key, 替代不安全的 Base64 回退存储
# Win32_UI_WindowsAndMessaging 用于应用启动失败时弹出 MessageBox 友好提示
# 仅在 Windows target 编译时引入, macOS/Linux 不受影响
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
